<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2bb7b3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/titleView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="146dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:text="@string/resetBtn"
        app:layout_constraintEnd_toStartOf="@+id/btn_restart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_itemList" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:text="@string/restart_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_reset"
        app:layout_constraintTop_toTopOf="@+id/btn_reset" />

    <TextView
        android:id="@+id/countView"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#fff100"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/countDown"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset" />

    <Button
        android:id="@+id/btn_goal"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/goalBtn"
        app:layout_constraintEnd_toStartOf="@+id/btn_stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countView" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="153dp"
        android:layout_height="45dp"
        android:text="@string/stopBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_goal"
        app:layout_constraintTop_toTopOf="@+id/btn_goal" />

    <ListView
        android:id="@+id/lv_itemList"
        android:layout_width="354dp"
        android:layout_height="215dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/countView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/countView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/countView"
        app:layout_constraintTop_toTopOf="@+id/countView" />

</androidx.constraintlayout.widget.ConstraintLayout>